--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
   <div id="comp-kk79j6463" class="_1Q9if" data-testid="richTextElement">
     <h1 class="font_6" style="text-align:center;line-height:1.35em;font-size:40px">
       <span class="color_15">
-        <span style="text-transform: uppercase;">About Me</span></span></h1></div><div id="comp-kk79j6464" class="_1Q9if" data-testid="richTextElement"><p class="font_8" style="text-align:center;line-height:1.75em;font-size:18px"><span class="color_15">Background and Thesis</span></p></div><div id="comp-kk79j6465" class="_1Q9if" data-testid="richTextElement"><p class="font_9" style="text-align:center;line-height:1.875em;font-size:15px"><span class="color_15">
+        <span style="text-transform: uppercase;">Hello, I'm Code Jedi</span></span></h1></div><div id="comp-kk79j6464" class="_1Q9if" data-testid="richTextElement"><p class="font_8" style="text-align:center;line-height:1.75em;font-size:18px"><span class="color_15">Background and Thesis</span></p></div><div id="comp-kk79j6465" class="_1Q9if" data-testid="richTextElement"><p class="font_9" style="text-align:center;line-height:1.875em;font-size:15px"><span class="color_15">
           Intruduction </span></p></div><div id="comp-kxz9xpmv" role="button" tabindex="0" aria-disabled="false" class="_2kLdM"><div data-testid="linkElement" class="_6lnTT" aria-disabled="false"></div></div></div>
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
