--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
     <link href="css/font-awesome.css" rel="stylesheet" type="text/css" />
     <link href="css/animate.css" rel="stylesheet" type="text/css" />
 
+
+    
     <!--[if lt IE 9]>
       <script src="js/respond-1.1.0.min.js"></script>
       <script src="js/html5shiv.js"></script>
@@ -57,6 +59,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
     <header id="header_wrapper">
       <div class="container">
         <div class="header_box">
+          <div class="logo"><a href="#"><img src="img/logo.png" alt="logo"></a></div>
           <nav class="navbar navbar-inverse" role="navigation">
             <div class="navbar-header">
               <button
@@ -92,15 +95,88 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
       <!--Aboutus-->
       <div class="inner_wrapper aboutUs-container fadeInLeft animated wow">
         <div class="container">
-          <div class="logo">
-            <a href="#"><img src="img/logo.png" alt="logo" /></a>
-          </div>
+          
           <h2>Who Am I</h2>
 
           <h6>
             Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci
             ipsum
           </h6>
+          <div class="inner_section">
+            <div class="row">
+              <div class="col-lg-12 about-us">
+                <div class="row">
+                  <div class="col-md-6">
+                    <img class="img-circle" src="img/CodeJedi.png" align="" />
+                  </div>
+                  <!-- /.col-md-6 -->
+                  <div class="col-md-6">
+                    <h3>I and a</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur Morbi sagittis,
+                      sem quisci ipsum gravida tortor orci ipsum gravida tortor.
+                      Lorem ipsum dolor sit amet, tortor orci ipsum gravida
+                      tortor. Lorem ipsum dolor sit amet, conseconsectetur.
+                    </p>
+                  </div>
+                  <!-- /.col-md-6 -->
+                </div>
+                <!-- /.row -->
+              </div>
+              <!-- /.col-lg-12 -->
+            </div>
+          </div>
+
+          <div class="inner_section">
+            <div class="row">
+              <div class="col-lg-12 about-us">
+                <div class="row">
+                  <div class="col-md-6">
+                    <img class="img-responsive" src="img/about1.jpg" align="" />
+                  </div>
+                  <!-- /.col-md-6 -->
+                  <div class="col-md-6">
+                    <h3>I and a</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur Morbi sagittis,
+                      sem quisci ipsum gravida tortor orci ipsum gravida tortor.
+                      Lorem ipsum dolor sit amet, tortor orci ipsum gravida
+                      tortor. Lorem ipsum dolor sit amet, conseconsectetur.
+                    </p>
+
+                    <ul class="about-us-list">
+                      <li class="points">
+                        Consectetur Morbi sagittis, sem quisci ipsum gravida
+                        tortor
+                      </li>
+                      <li class="points">
+                        Morbi sagittis, sem quis lacinia faucibus, orci ipsum
+                        gravida
+                      </li>
+                      <li class="points">
+                        Lorem ipsum dolor sit amet, consectetur Morbi sagittis,
+                        sem quisci gravida
+                      </li>
+                      <li class="points">
+                        Sagittis, sem quis lacinia faucibus, orci ipsum gravida
+                      </li>
+                      <li class="points">
+                        Ipsum dolor sit amet, consectetur Morbi sagittis, sem
+                        quisci
+                      </li>
+                    </ul>
+                    <!-- /.about-us-list -->
+                  </div>
+                  <!-- /.col-md-6 -->
+                </div>
+                <!-- /.row -->
+              </div>
+              <!-- /.col-lg-12 -->
+            </div>
+          </div>
+
+
+
 
           <div class="inner_section">
             <div class="row">
