--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
               <div class="col-lg-12 about-us">
                 <div class="row">
                   <div class="col-md-6">
-                    <img class="img-circle" src="img/CodeJedi.png" align="" />
+                    <h2>Who Am I</h2>
+
+                    <h6>
+                      Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci
+                      ipsum
+                    </h6>
                   </div>
                   <!-- /.col-md-6 -->
                   <div class="col-md-6">
-                    <h3>I and a</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur Morbi sagittis,
-                      sem quisci ipsum gravida tortor orci ipsum gravida tortor.
-                      Lorem ipsum dolor sit amet, tortor orci ipsum gravida
-                      tortor. Lorem ipsum dolor sit amet, conseconsectetur.
-                    </p>
+                    <img class="img-circle" src="img/CodeJedi.png" align="" />
                   </div>
                   <!-- /.col-md-6 -->
+
                 </div>
                 <!-- /.row -->
               </div>
