--- a/index.html
+++ b/index.html
@@ -104,21 +104,19 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           </h6>
           <div class="inner_section">
             <div class="row">
-              <div class="col-lg-12 about-us">
+              <div class="col-lg-12 aboutUs-container fadeInLeft animated wow">
                 <div class="row">
                   <div class="col-md-6">
-                    <h2>Who Am I</h2>
-
-                    <h6>
-                      Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci
-                      ipsum
-                    </h6>
+                    <h3>Brief Self description</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur Morbi sagittis,
+                      sem quisci ipsum gravida tortor orci ipsum gravida tortor.
+                      Lorem ipsum dolor sit amet, tortor orci ipsum gravida
+                      tortor. Lorem ipsum dolor sit amet, conseconsectetur.
+                    </p>
                   </div>
                   <!-- /.col-md-6 -->
-                  <div class="col-md-6">
-                    <img class="img-circle" src="img/CodeJedi.png" align="" />
-                  </div>
-                  <!-- /.col-md-6 -->
+                    <img class="img-circle" src="img/CodeJedi.png" align="right" />
 
                 </div>
                 <!-- /.row -->
