--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
               <div class="col-lg-12 about-us">
                 <div class="row">
                   <div class="col-md-6">
-                    <img class="img-responsive" src="img/about1.jpg" align="left" />
+                    <img class="img-responsive" src="img/about1.jpg" align="" />
                   </div>
-                    <h3>I and a</h3>
+                  <!-- /.col-md-6 -->
+                  <div class="col-md-6">
+                    <h3>I Design Awesome Web Apps</h3>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur Morbi sagittis,
                       sem quisci ipsum gravida tortor orci ipsum gravida tortor.
@@ -158,59 +160,6 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                       </li>
                     </ul>
                     <!-- /.about-us-list -->
-                  </div>
-                  <!-- /.col-md-6 -->
-                  
-
-                <!-- /.row -->
-              </div>
-              <!-- /.col-lg-12 -->
-            </div>
-          </div>
-
-
-
-
-          <div class="inner_section">
-            <div class="row">
-              <div class="col-lg-12 about-us">
-                <div class="row">
-                 
-                  <!-- /.col-md-6 -->
-                  <div class="col-md-6">
-                    <h3>CodeJEdi</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur Morbi sagittis,
-                      sem quisci ipsum gravida tortor orci ipsum gravida tortor.
-                      Lorem ipsum dolor sit amet, tortor orci ipsum gravida
-                      tortor. Lorem ipsum dolor sit amet, conseconsectetur.
-                    </p>
-
-                    <ul class="about-us-list">
-                      <li class="points">
-                        Consectetur Morbi sagittis, sem quisci ipsum gravida
-                        tortor
-                      </li>
-                      <li class="points">
-                        Morbi sagittis, sem quis lacinia faucibus, orci ipsum
-                        gravida
-                      </li>
-                      <li class="points">
-                        Lorem ipsum dolor sit amet, consectetur Morbi sagittis,
-                        sem quisci gravida
-                      </li>
-                      <li class="points">
-                        Sagittis, sem quis lacinia faucibus, orci ipsum gravida
-                      </li>
-                      <li class="points">
-                        Ipsum dolor sit amet, consectetur Morbi sagittis, sem
-                        quisci
-                      </li>
-                    </ul>
-                    <!-- /.about-us-list -->
-                  </div>
-                  <div class="col-md-6">
-                    <img class="img-circle" src="img/CodeJedi.png" align="right" />
                   </div>
                   <!-- /.col-md-6 -->
                 </div>
@@ -219,6 +168,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
               <!-- /.col-lg-12 -->
             </div>
           </div>
+
+
+
         </div>
       </div>
     </section>
@@ -237,7 +189,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="col-md-3">
               <div class="skills_icon delay-03s animated wow zoomIn">
                 <img
-                  src="https://images.credly.com/images/68468004-5a85-4f3b-bc58-590773979486/AWS-CloudPractitioner-2020.png"
+                  src="img/aws-practitioner.png"
                   alt="AWS-CloudPractitioner-2021"
                 />
               </div>
@@ -254,7 +206,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="col-md-3">
               <div class="skills_icon icon2 delay-03s animated wow zoomIn">
                 <img
-                  src="https://d1.awsstatic.com/training-and-certification/Certification%20Badges/AWS-Certified_Developer_Associate_badge_512x512.616df8fd6c6a4298d013b7787e0bbbf93f9e2760.png"
+                  src="img/aws-developer.png"
                   alt="AWS-Developer"
                 />
               </div>
@@ -303,7 +255,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
         <!-- Title -->
         <div class="section-title">
           <h2>Projects</h2>
-          <h6>Nessesity is the mother of invention</h6>
+          <h6>Necessity is the mother of invention</h6>
         </div>
         <!--/Title -->
       </div>
@@ -407,7 +359,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <a href="https://github.com/leorfed/MLH-ChatBot" class="fancybox">
                   <h2>Chat <span>Bot</span></h2>
                   <p>
-                    AN intent baised discord chatbot
+                    intent baised  chatbot
                   </p>
                 </a>
               </div>
@@ -435,7 +387,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <a href="https://github.com/Darsboy/The-relationship-between-Covid-19-and-culture" class="fancybox">
                   <h2>COVID <span>Stat</span></h2>
                   <p>
-                    A little statistic research about covid 19
+                    Culture vs covid 19
                   </p>
                 </a>
               </div>
