--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                   AWS Certified Practitioner
                 </h3>
                 <p class="animated fadeInDown wow">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  2 January 2021
                 </p>
               </div>
             </div>
@@ -213,8 +212,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
               <div class="skills_block">
                 <h3 class="animated fadeInUp wow">AWS Certified Developer</h3>
                 <p class="animated fadeInDown wow">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  29 August 2021
                 </p>
               </div>
             </div>
@@ -223,10 +221,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <span></span>
               </div>
               <div class="skills_block">
-                <h3 class="animated fadeInUp wow">Next Step?</h3>
+                <h3 class="animated fadeInUp wow">Next Step</h3>
                 <p class="animated fadeInDown wow">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  ?
                 </p>
               </div>
             </div>
@@ -235,10 +232,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <span></span>
               </div>
               <div class="skills_block">
-                <h3 class="animated fadeInUp wow">Next Step?</h3>
+                <h3 class="animated fadeInUp wow">Next Step</h3>
                 <p class="animated fadeInDown wow">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  ?
                 </p>
               </div>
             </div>
