--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     <h2>Who Am I</h2>
 
                     <h6>
-                      Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci
-                      ipsum
+                      "Let each person examine his own work, and then he can take pride in himself alone, and not compare himself with someone else." -- Galatians 6:4
                     </h6>
                   </div>
                   <!-- /.col-md-6 -->
@@ -132,10 +131,15 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                   <div class="col-md-6">
                     <h3>I Design Awesome Web Apps</h3>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur Morbi sagittis,
-                      sem quisci ipsum gravida tortor orci ipsum gravida tortor.
-                      Lorem ipsum dolor sit amet, tortor orci ipsum gravida
-                      tortor. Lorem ipsum dolor sit amet, conseconsectetur.
+                      Majored in Computer Science (2020-2025) at University of Waterloo, Canada
+On the journey towards Statistics minor and AI specification.
+Knowledgeable with programming languages: C, C++, c#, Java, R and Python
+Developer Tools:  Pycharm, Eclipse, Jupyter Notebook, XCode, Visual studio, VSCode, Code Blocks, Robot Framework
+Libraries: OpenCV, Tensorflow, PyTorch, Scikit-learn, Seaborn, Selenium, Pandas, Numpy, MatplotLib, PyTorch, OpenAIGym
+DevOps: CI/CD, GitHub, CodeCommit, CodePipeline, Jenkins, Ansible, Docker, Kubernetes
+Database: PostgreSQL, MySQL, Aurora, MongoDB, DynamoDB
+Cloud: AWS, Azure
+Hobbies: Computer games, kayaking, traveling to explore the different beauty of earth
                     </p>
 
                     <ul class="about-us-list">
@@ -181,8 +185,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
       <div class="container">
         <h2>Skills</h2>
         <h6>
-          "The greatest discovery in science is ignorance" - Yuval Noah Harari
-          (Homo Deus)
+          “The greatest scientific discovery was the discovery of ignorance.”-- Yuval Noah Harari, Homo Deus: A History of Tomorrow
         </h6>
         <div class="skills_wrapper">
           <div class="row">
@@ -289,8 +292,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
               </a>
             </li>
             <li>
-              <a class="" href="#" data-filter=".web">
-                <h5>Web App</h5>
+              <a class="" href="#" data-filter=".RL">
+                <h5>Rienforcement Learning</h5>
               </a>
             </li>
           </ul>
@@ -437,7 +440,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <figcaption>
               <div>
                 <a href="img/portfolio_pic4.jpg" class="fancybox">
-                  <h2>Warm <span>Oscar</span></h2>
+                  <h2>AWS <span>Oscar</span></h2>
                   <p>
                     Oscar is a decent man. He used to clean porches with
                     pleasure.
