--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ Hobbies: Computer games, kayaking, traveling to explore the different beauty of 
                   class="fancybox"
                 >
                   <h2>DEEP <span>RACER</span></h2>
-                  <p>1/18 scail racecar</p>
+                  <p>1/18 scale racecar</p>
                 </a>
               </div>
             </figcaption>
