Centered Background Images

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@ Hobbies: Computer games, kayaking, traveling to explore the different beauty of 
               </a>
             </li>
             <li>
-              <a class="" href="#" data-filter=".prototype">
-                <h5>Prototype</h5>
+              <a class="" href="#" data-filter=".devops">
+                <h5>DEVOPS</h5>
               </a>
             </li>
             <li>
@@ -282,13 +282,13 @@ Hobbies: Computer games, kayaking, traveling to explore the different beauty of 
               </a>
             </li>
             <li>
-              <a class="" href="#" data-filter=".android">
-                <h5>Android</h5>
+              <a class="" href="#" data-filter=".ML">
+                <h5>Machine Learning</h5>
               </a>
             </li>
             <li>
               <a class="" href="#" data-filter=".AWS">
-                <h5>AWS</h5>
+                <h5>AWS LABS</h5>
               </a>
             </li>
             <li>
@@ -316,7 +316,7 @@ Hobbies: Computer games, kayaking, traveling to explore the different beauty of 
               width: 337px;
               opacity: 1;
             "
-            class="portfolio-item one-four AWS isotope-item effect-oscar"
+            class="portfolio-item one-four RL isotope-item effect-oscar"
           >
             <div class="portfolio_img">
               <img
@@ -348,7 +348,7 @@ Hobbies: Computer games, kayaking, traveling to explore the different beauty of 
               width: 337px;
               opacity: 1;
             "
-            class="portfolio-item one-four AWS isotope-item effect-oscar"
+            class="portfolio-item one-four ML isotope-item effect-oscar"
           >
             <div class="portfolio_img">
               <img src="img/chatbot.png" alt="Portfolio 1" />
@@ -376,7 +376,7 @@ Hobbies: Computer games, kayaking, traveling to explore the different beauty of 
               width: 337px;
               opacity: 1;
             "
-            class="portfolio-item one-four design isotope-item effect-oscar"
+            class="portfolio-item one-four ML isotope-item effect-oscar"
           >
             <div class="portfolio_img">
               <img src="img/covid.jpeg" alt="Portfolio 1" />
@@ -404,7 +404,7 @@ Hobbies: Computer games, kayaking, traveling to explore the different beauty of 
               width: 337px;
               opacity: 1;
             "
-            class="portfolio-item one-four android prototype web isotope-item effect-oscar"
+            class="portfolio-item one-four android devops web isotope-item effect-oscar"
           >
             <div class="portfolio_img">
               <img src="img/portfolio_pic4.jpg" alt="Portfolio 1" />
@@ -432,7 +432,7 @@ Hobbies: Computer games, kayaking, traveling to explore the different beauty of 
               width: 337px;
               opacity: 1;
             "
-            class="portfolio-item one-four android prototype web isotope-item effect-oscar"
+            class="portfolio-item one-four android devops web isotope-item effect-oscar"
           >
             <div class="portfolio_img">
               <img src="img/portfolio_pic4.jpg" alt="Portfolio 1" />
@@ -460,10 +460,10 @@ Hobbies: Computer games, kayaking, traveling to explore the different beauty of 
               width: 337px;
               opacity: 1;
             "
-            class="portfolio-item one-four android prototype web isotope-item effect-oscar"
+            class="portfolio-item one-four android AWS web isotope-item effect-oscar"
           >
             <div class="portfolio_img">
-              <img src="img/portfolio_pic4.jpg" alt="Portfolio 1" />
+              <img src="img/wildryde.jpeg" alt="wildryde" />
             </div>
             <figcaption>
               <div>
@@ -488,10 +488,10 @@ Hobbies: Computer games, kayaking, traveling to explore the different beauty of 
               width: 337px;
               opacity: 1;
             "
-            class="portfolio-item one-four design isotope-item effect-oscar"
+            class="portfolio-item one-four AWS isotope-item effect-oscar"
           >
             <div class="portfolio_img">
-              <img src="img/portfolio_pic5.jpg" alt="Portfolio 1" />
+              <img src="img/trendone.jpeg" alt="Portfolio 1" />
             </div>
             <figcaption>
               <div>
