--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     <h6>
                       "Let each person examine his own work, and then he can take pride in himself alone, and not compare himself with someone else." -- Galatians 6:4
                     </h6>
+                    <p>
+
+                    </p>
                   </div>
                   <!-- /.col-md-6 -->
                   <div class="col-md-2">
@@ -129,38 +132,29 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                   </div>
                   <!-- /.col-md-6 -->
                   <div class="col-md-6">
-                    <h3>I Design Awesome Web Apps</h3>
+                    <h3>I can use</h3>
                     <p>
-                      Majored in Computer Science (2020-2025) at University of Waterloo, Canada
-On the journey towards Statistics minor and AI specification.
-Knowledgeable with programming languages: C, C++, c#, Java, R and Python
-Developer Tools:  Pycharm, Eclipse, Jupyter Notebook, XCode, Visual studio, VSCode, Code Blocks, Robot Framework
-Libraries: OpenCV, Tensorflow, PyTorch, Scikit-learn, Seaborn, Selenium, Pandas, Numpy, MatplotLib, PyTorch, OpenAIGym
-DevOps: CI/CD, GitHub, CodeCommit, CodePipeline, Jenkins, Ansible, Docker, Kubernetes
-Database: PostgreSQL, MySQL, Aurora, MongoDB, DynamoDB
-Cloud: AWS, Azure
-Hobbies: Computer games, kayaking, traveling to explore the different beauty of earth
+                      I am currently majoring in Computer Science (2020-2025) at the University of Waterloo, Canada. On the journey towards Statistics minor and AI specification. During my free time I enjoy exploring new technologies like the AWS cloud and Machine learning. 
                     </p>
 
                     <ul class="about-us-list">
                       <li class="points">
-                        Consectetur Morbi sagittis, sem quisci ipsum gravida
-                        tortor
+                        Programming languages: C, C++, c#, Java, R and Python
                       </li>
                       <li class="points">
-                        Morbi sagittis, sem quis lacinia faucibus, orci ipsum
-                        gravida
+                        Developer Tools:  Pycharm, Eclipse, Jupyter Notebook, XCode, Visual studio, VSCode, Code Blocks, Robot Framework
                       </li>
                       <li class="points">
-                        Lorem ipsum dolor sit amet, consectetur Morbi sagittis,
-                        sem quisci gravida
+                        Libraries: OpenCV, Tensorflow, PyTorch, Scikit-learn, Seaborn, Selenium, Pandas, Numpy, MatplotLib, PyTorch, OpenAIGym
                       </li>
                       <li class="points">
-                        Sagittis, sem quis lacinia faucibus, orci ipsum gravida
+                        DevOps: CI/CD, GitHub, CodeCommit, CodePipeline, Jenkins, Ansible, Docker, Kubernetes
                       </li>
                       <li class="points">
-                        Ipsum dolor sit amet, consectetur Morbi sagittis, sem
-                        quisci
+                        Database: PostgreSQL, MySQL, Aurora, MongoDB, DynamoDB
+                      </li>
+                      <li class="points">
+                        Cloud: AWS, Azure
                       </li>
                     </ul>
                     <!-- /.about-us-list -->
