--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, maximum-scale=1" />
-    <title>Wow Portfolio Multi Purpose HTML5 Template | Webthemez</title>
+    <title>CodeJedi's Portfolio</title>
     <link rel="icon" href="favicon.png" type="image/png" />
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link
@@ -132,9 +132,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                   </div>
                   <!-- /.col-md-6 -->
                   <div class="col-md-6">
-                    <h3>I can use</h3>
+                    <h3>I am currently majoring in Computer Science (2020-2025) at the University of Waterloo, Canada.</h3>
                     <p>
-                      I am currently majoring in Computer Science (2020-2025) at the University of Waterloo, Canada. On the journey towards Statistics minor and AI specification. During my free time I enjoy exploring new technologies like the AWS cloud and Machine learning. 
+                       On the journey towards Statistics minor and AI specification. During my free time I enjoy exploring new technologies like the AWS cloud and Machine learning. 
                     </p>
 
                     <ul class="about-us-list">
@@ -276,8 +276,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
               </a>
             </li>
             <li>
-              <a class="" href="#" data-filter=".design">
-                <h5>Design</h5>
+              <a class="" href="#" data-filter=".python">
+                <h5>python</h5>
               </a>
             </li>
             <li>
@@ -388,62 +388,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           </figure>
           <!--/Portfolio Item-->
 
-          <!-- Portfolio Item-->
-          <figure
-            style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(1011px, 0px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            "
-            class="portfolio-item one-four android devops web isotope-item effect-oscar"
-          >
-            <div class="portfolio_img">
-              <img src="img/portfolio_pic4.jpg" alt="Portfolio 1" />
-            </div>
-            <figcaption>
-              <div>
-                <a href="img/portfolio_pic4.jpg" class="fancybox">
-                  <h2>Warm <span>Oscar</span></h2>
-                  <p>
-                    Oscar is a decent man. He used to clean porches with
-                    pleasure.
-                  </p>
-                </a>
-              </div>
-            </figcaption>
-          </figure>
-          <!-- Portfolio Item -->
-          <!-- Portfolio Item-->
-          <figure
-            style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(1011px, 0px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            "
-            class="portfolio-item one-four android devops web isotope-item effect-oscar"
-          >
-            <div class="portfolio_img">
-              <img src="img/portfolio_pic4.jpg" alt="Portfolio 1" />
-            </div>
-            <figcaption>
-              <div>
-                <a href="img/portfolio_pic4.jpg" class="fancybox">
-                  <h2>AWS <span>Oscar</span></h2>
-                  <p>
-                    Oscar is a decent man. He used to clean porches with
-                    pleasure.
-                  </p>
-                </a>
-              </div>
-            </figcaption>
-          </figure>
-          <!-- Portfolio Item -->
+
           <!-- Portfolio Item-->
           <figure
             style="
@@ -462,10 +407,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <figcaption>
               <div>
                 <a href="img/portfolio_pic4.jpg" class="fancybox">
-                  <h2>Warm <span>Oscar</span></h2>
+                  <h2>WILD <span>RYDE</span></h2>
                   <p>
-                    Oscar is a decent man. He used to clean porches with
-                    pleasure.
+                    SERVERLESS!!!!
                   </p>
                 </a>
               </div>
@@ -490,10 +434,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <figcaption>
               <div>
                 <a href="img/portfolio_pic5.jpg" class="fancybox">
-                  <h2>Warm <span>Oscar</span></h2>
+                  <h2>DEVSECOPS</h2>
                   <p>
-                    Oscar is a decent man. He used to clean porches with
-                    pleasure.
+                    Security + DevOps
                   </p>
                 </a>
               </div>
@@ -511,7 +454,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
               width: 337px;
               opacity: 1;
             "
-            class="portfolio-item one-four web isotope-item effect-oscar"
+            class="portfolio-item one-four ML isotope-item effect-oscar"
           >
             <div class="portfolio_img">
               <img src="img/portfolio_pic6.jpg" alt="Portfolio 1" />
@@ -519,10 +462,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <figcaption>
               <div>
                 <a href="img/portfolio_pic6.jpg" class="fancybox">
-                  <h2>Warm <span>Oscar</span></h2>
+                  <h2>MNIST </h2>
                   <p>
-                    Oscar is a decent man. He used to clean porches with
-                    pleasure.
+                    Handwriting classification
                   </p>
                 </a>
               </div>
@@ -530,63 +472,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           </figure>
           <!--/Portfolio Item -->
 
-          <!-- Portfolio Item  -->
-          <figure
-            style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(674px, 240px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            "
-            class="portfolio-item one-four design web isotope-item effect-oscar"
-          >
-            <div class="portfolio_img">
-              <img src="img/portfolio_pic7.jpg" alt="Portfolio 1" />
-            </div>
-            <figcaption>
-              <div>
-                <a href="img/portfolio_pic7.jpg" class="fancybox">
-                  <h2>Warm <span>Oscar</span></h2>
-                  <p>
-                    Oscar is a decent man. He used to clean porches with
-                    pleasure.
-                  </p>
-                </a>
-              </div>
-            </figcaption>
-          </figure>
-          <!--/Portfolio Item -->
 
-          <!-- Portfolio Item -->
-          <figure
-            style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(1011px, 240px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            "
-            class="portfolio-item one-four android isotope-item effect-oscar"
-          >
-            <div class="portfolio_img">
-              <img src="img/portfolio_pic8.jpg" alt="Portfolio 1" />
-            </div>
-            <figcaption>
-              <div>
-                <a href="img/portfolio_pic8.jpg" class="fancybox">
-                  <h2>Warm <span>Oscar</span></h2>
-                  <p>
-                    Oscar is a decent man. He used to clean porches with
-                    pleasure.
-                  </p>
-                </a>
-              </div>
-            </figcaption>
-          </figure>
-          <!--/Portfolio Item -->
+
         </div>
         <!--/Portfolio Wrapper -->
       </div>
@@ -616,69 +503,21 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="col-lg-4 wow fadeInLeft">
               <div class="contact_info">
                 <div class="detail">
-                  <h4>UNIQUE Infoway</h4>
-                  <p>104, Some street, NewYork, USA</p>
-                </div>
-                <div class="detail">
                   <h4>call us</h4>
                   <p>+1 234 567890</p>
                 </div>
                 <div class="detail">
                   <h4>Email us</h4>
-                  <p>support@sitename.com</p>
+                  <p>darcy.ldx@gmail.com</p>
+                  <h4>Email us</h4>
+                  <p>darcy.ldx@gmail.com</p>
+                  <a href="https://www.linkedin.com/in/codejediatuw/"
+                  > Linked in</i
+                ></a>
                 </div>
               </div>
-
-              <ul class="social_links">
-                <li class="twitter animated bounceIn wow delay-02s">
-                  <a href="javascript:void(0)"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li class="facebook animated bounceIn wow delay-03s">
-                  <a href="javascript:void(0)"
-                    ><i class="fa fa-facebook"></i
-                  ></a>
-                </li>
-                <li class="pinterest animated bounceIn wow delay-04s">
-                  <a href="javascript:void(0)"
-                    ><i class="fa fa-pinterest"></i
-                  ></a>
-                </li>
-                <li class="gplus animated bounceIn wow delay-05s">
-                  <a href="javascript:void(0)"
-                    ><i class="fa fa-google-plus"></i
-                  ></a>
-                </li>
-              </ul>
             </div>
             <div class="col-lg-8 wow fadeInLeft delay-06s">
-              <div class="form">
-                <input
-                  class="input-text"
-                  type="text"
-                  name=""
-                  value="Your Name *"
-                  onFocus="if(this.value==this.defaultValue)this.value='';"
-                  onBlur="if(this.value=='')this.value=this.defaultValue;"
-                />
-                <input
-                  class="input-text"
-                  type="text"
-                  name=""
-                  value="Your E-mail *"
-                  onFocus="if(this.value==this.defaultValue)this.value='';"
-                  onBlur="if(this.value=='')this.value=this.defaultValue;"
-                />
-                <textarea
-                  class="input-text text-area"
-                  cols="0"
-                  rows="0"
-                  onFocus="if(this.value==this.defaultValue)this.value='';"
-                  onBlur="if(this.value=='')this.value=this.defaultValue;"
-                >
-Your Message *</textarea
-                >
-                <input class="input-btn" type="submit" value="send message" />
-              </div>
             </div>
           </div>
         </section>
