--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                   </div>
                   <!-- /.col-md-6 -->
                   <div class="col-md-6">
-                    <h3>I am currently majoring in Computer Science (2020-2025) at the University of Waterloo, Canada.</h3>
+                    <h3>Majoring in Computer Science (2020-2025) at the University of Waterloo, Canada.</h3>
                     <p>
-                       On the journey towards Statistics minor and AI specification. During my free time I enjoy exploring new technologies like the AWS cloud and Machine learning. 
+                       On the journey towards Statistics minor and AI specification, 
+                       my passions and interests always lead me engaging in new technologies, like cloud computing and machine learning. 
                     </p>
 
                     <ul class="about-us-list">
@@ -314,8 +315,10 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           >
             <div class="portfolio_img">
               <img
-                src="img/deepracer.jepg"
+                src="img/deepracer.png"
                 alt="Portfolio 1"
+                width="337" 
+                height="600"
               />
             </div>
             <figcaption>
@@ -495,30 +498,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           <div class="contact_section">
             <h2>Get In Touch</h2>
             <h6>
-              Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci
-              ipsum
+               <h3><a href="https://www.linkedin.com/in/codejediatuw/">Let's linked in</i></a></h3> 
             </h6>
-          </div>
-          <div class="row">
-            <div class="col-lg-4 wow fadeInLeft">
-              <div class="contact_info">
-                <div class="detail">
-                  <h4>call us</h4>
-                  <p>+1 234 567890</p>
-                </div>
-                <div class="detail">
-                  <h4>Email us</h4>
-                  <p>darcy.ldx@gmail.com</p>
-                  <h4>Email us</h4>
-                  <p>darcy.ldx@gmail.com</p>
-                  <a href="https://www.linkedin.com/in/codejediatuw/"
-                  > Linked in</i
-                ></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-8 wow fadeInLeft delay-06s">
-            </div>
           </div>
         </section>
       </div>
