--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             </div>
             <figcaption>
               <div>
-                <a href="img/portfolio_pic4.jpg" class="fancybox">
+                <a href="https://github.com/codejedi-ai/WildRyde/blob/main/WildRydeReport.pdf" class="fancybox">
                   <h2>WILD <span>RYDE</span></h2>
                   <p>
                     SERVERLESS!!!!
@@ -475,8 +475,60 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           </figure>
           <!--/Portfolio Item -->
 
-
-
+          <!-- Portfolio Item -->
+          <figure
+            style="
+              position: absolute;
+              left: 0px;
+              top: 0px;
+              transform: translate3d(337px, 240px, 0px) scale3d(1, 1, 1);
+              width: 337px;
+              opacity: 1;
+            "
+            class="portfolio-item one-four AWS isotope-item effect-oscar"
+          >
+            <div class="portfolio_img">
+              <img src="img/portfolio_pic6.jpg" alt="Portfolio 1" />
+            </div>
+            <figcaption>
+              <div>
+                <a href="img/portfolio_pic6.jpg" class="fancybox">
+                  <h2>DEVMLOPS </h2>
+                  <p>
+                    DevOps + Machine Learning
+                  </p>
+                </a>
+              </div>
+            </figcaption>
+          </figure>
+          <!--/Portfolio Item -->
+          <!-- Portfolio Item -->
+          <figure
+            style="
+              position: absolute;
+              left: 0px;
+              top: 0px;
+              transform: translate3d(337px, 240px, 0px) scale3d(1, 1, 1);
+              width: 337px;
+              opacity: 1;
+            "
+            class="portfolio-item one-four ML isotope-item effect-oscar"
+          >
+            <div class="portfolio_img">
+              <img src="img/portfolio_pic6.jpg" alt="Portfolio 1" />
+            </div>
+            <figcaption>
+              <div>
+                <a href="img/portfolio_pic6.jpg" class="fancybox">
+                  <h2>Real estate Regression </h2>
+                  <p>
+                    Performing linear regression on housing data
+                  </p>
+                </a>
+              </div>
+            </figcaption>
+          </figure>
+          <!--/Portfolio Item -->
         </div>
         <!--/Portfolio Wrapper -->
       </div>
