--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             </div>
             <figcaption>
               <div>
-                <a href="https://github.com/codejedi-ai/WildRyde/blob/main/WildRydeReport.pdf" class="fancybox">
+                <a href="pdfs/WildRydeReport.pdf" class="nav-link">
                   <h2>WILD <span>RYDE</span></h2>
                   <p>
                     SERVERLESS!!!!
@@ -519,7 +519,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             </div>
             <figcaption>
               <div>
-                <a href="img/portfolio_pic6.jpg" class="fancybox">
+                <a href="pdfs/WildRydeReport.pdf" class="nav-link">
                   <h2>Real estate Regression </h2>
                   <p>
                     Performing linear regression on housing data
