--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             </li>
             <li>
               <a class="" href="#" data-filter=".AWS">
-                <h5>AWS LABS</h5>
+                <h5>AWS workshop</h5>
               </a>
             </li>
             <li>
-              <a class="" href="#" data-filter=".devops">
-                <h5>DEVOPS</h5>
+              <a class="" href="#" data-filter=".XCode">
+                <h5>XCode</h5>
               </a>
             </li>
             <li>
@@ -436,7 +436,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             </div>
             <figcaption>
               <div>
-                <a href="img/portfolio_pic5.jpg" class="fancybox">
+                <a href="pdfs/DevSecOpsReport.pdf" class="nav-link">
                   <h2>DEVSECOPS</h2>
                   <p>
                     Security + DevOps
@@ -460,11 +460,11 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             class="portfolio-item one-four ML isotope-item effect-oscar"
           >
             <div class="portfolio_img">
-              <img src="img/portfolio_pic6.jpg" alt="Portfolio 1" />
+              <img src="img/handwrightingrecognization.jpeg" alt="Portfolio 1" />
             </div>
             <figcaption>
               <div>
-                <a href="img/portfolio_pic6.jpg" class="fancybox">
+                <a href="img/handwrightingrecognization.jpeg" class="fancybox">
                   <h2>MNIST </h2>
                   <p>
                     Handwriting classification
@@ -488,11 +488,11 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             class="portfolio-item one-four AWS isotope-item effect-oscar"
           >
             <div class="portfolio_img">
-              <img src="img/portfolio_pic6.jpg" alt="Portfolio 1" />
+              <img src="img/devmlops.png" alt="Portfolio 1" />
             </div>
             <figcaption>
               <div>
-                <a href="img/portfolio_pic6.jpg" class="fancybox">
+                <a href="img/portfolio_pic6.jpg" class="nav-link">
                   <h2>DEVMLOPS </h2>
                   <p>
                     DevOps + Machine Learning
@@ -515,12 +515,12 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             class="portfolio-item one-four ML isotope-item effect-oscar"
           >
             <div class="portfolio_img">
-              <img src="img/portfolio_pic6.jpg" alt="Portfolio 1" />
+              <img src="img/realestate.jpeg" alt="Portfolio 1" />
             </div>
             <figcaption>
               <div>
-                <a href="pdfs/WildRydeReport.pdf" class="nav-link">
-                  <h2>Real estate Regression </h2>
+                <a href="pdfs/realestate.jpeg.pdf" class="nav-link">
+                  <h2>RealEstate</h2>
                   <p>
                     Performing linear regression on housing data
                   </p>
