Next Step: AWS Certified Machine Learning - Speciality

--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <span></span>
                         </div>
                         <div class="skills_block">
-                            <h3 class="animated fadeInUp wow">Next Step</h3>
+                            <h3 class="animated fadeInUp wow">Next Step: AWS Certified Machine Learning - Speciality</h3>
                             <p class="animated fadeInDown wow">
-                                ?
+                                By end of 2022
                             </p>
                         </div>
                     </div>
