AWS Certified Machine Learning - Speciality

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </div>
                     <figcaption>
                         <div>
-                            <a href="img/portfolio_pic6.jpg" class="nav-link">
+                            <a href="pdfs/mlops.pdf" class="nav-link">
                                 <h2>DEVMLOPS </h2>
                                 <p>
                                     DevOps + Machine Learning
