https://catalog.us-east-1.prod.workshops.aws/v2/workshops/44d3e2a0-ec6f-44df-9397-bcfdf129cadf/en-US/

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </div>
                     <figcaption>
                         <div>
-                            <a href="pdfs/mlops.pdf" class="nav-link">
+                            <a href="https://catalog.us-east-1.prod.workshops.aws/v2/workshops/44d3e2a0-ec6f-44df-9397-bcfdf129cadf/en-US/" class="nav-link">
                                 <h2>DEVMLOPS </h2>
                                 <p>
                                     DevOps + Machine Learning
