--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </div>
                     <figcaption>
                         <div>
-                            <a href="pdfs/WildRydeReport.pdf" class="nav-link">
+                            <a href="https://webapp.serverlessworkshops.io" class="nav-link">
                                 <h2>WILD <span>RYDE</span></h2>
                                 <p>
                                     SERVERLESS!!!!
@@ -425,7 +425,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </div>
                     <figcaption>
                         <div>
-                            <a href="pdfs/DevSecOpsReport.pdf" class="nav-link">
+                            <a href="https://trendmicro-appsec.awsworkshop.io" class="nav-link">
                                 <h2>DEVSECOPS</h2>
                                 <p>
                                     Security + DevOps
@@ -499,7 +499,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </div>
                     <figcaption>
                         <div>
-                            <a href="pdfs/realestate.jpeg.pdf" class="nav-link">
+                            <a href="https://github.com/codejedi-ai/Boston-House-Price-Analysis" class="nav-link">
                                 <h2>RealEstate</h2>
                                 <p>
                                     Performing linear regression on housing data
@@ -550,7 +550,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
     <script type="text/javascript" src="js/jquery.nav.js"></script>
     <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="js/jquery.isotope.js"></script>
-    <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/fancybox/jquery.fancybox.pack.js"></script>
     <script type="text/javascript" src="js/wow.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
     <script type="text/javascript" src="js/slideshowscript.js"></script>
