--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     <figcaption>
                         <div>
                             <a href="pdfs/DevSecOpsReport.pdf" class="nav-link">
-                                <h2>DEVSECOPS</h2>
+                                <h2>Trend Micro One</h2>
                                 <p>
                                     Security + DevOps
                                 </p>
@@ -451,7 +451,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     <figcaption>
                         <div>
                             <a href="img/handwrightingrecognization.jpeg" class="fancybox">
-                                <h2>MNIST </h2>
+                                <h2>DevSecOps </h2>
                                 <p>
                                     Handwriting classification
                                 </p>
